5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1590_825.log
== TEST (2019-03-25 15:23:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?")
area = pi*r**2
volume = 4//3 * pi * r**3
print(round(area, 3)
print(volume(volume, 3)
-- ERROR:
File "XXXX", line 6
    area = pi*r**2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:23:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?")
area = pi*r**2
volume = 4//3 * pi * r**3
print(round(area, 3)
print(volume(volume, 3)
-- EXECUTION TIME:
0.128946
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 6
    area = pi*r**2
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?"))
area = pi*r**2
volume = 4//3 * pi * r**3
print(round(area, 3)
print(volume(volume, 3)
-- ERROR:
File "XXXX", line 9
    print(volume(volume, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:23:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?"))
area = pi*r**2
volume = 4//3 * pi * r**3
print(round(area, 3)
print(volume(volume, 3)
-- EXECUTION TIME:
0.17654
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(volume(volume, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?"))
area = pi*r**2
volume = 4//3 * pi * r**3
print(round(area, 3)
print(round(volume, 3)
-- ERROR:
File "XXXX", line 9
    print(round(volume, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:23:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?"))
area = pi*r**2
volume = 4//3 * pi * r**3
print(round(area, 3)
print(round(volume, 3)
-- EXECUTION TIME:
0.146179
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(volume, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4//3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- ERROR:
File "XXXX", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:23:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4//3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.249691
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:23:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4//3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- ERROR:
File "XXXX", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:23:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4//3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.128527
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4//3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- ERROR:
File "XXXX", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:24:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4//3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.172295
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4/3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- ERROR:
File "XXXX", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:24:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = 4/3 * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.193278
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3) * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- ERROR:
File "XXXX", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:24:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3) * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.173226
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:24:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3) * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.167838
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:26:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3) * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- ERROR:
File "XXXX", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:26:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3) * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.129064
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:26:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3) * pi * r**3
print(round(a, 3)
print(round(v, 3)
-- EXECUTION TIME:
0.148966
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 9
    print(round(v, 3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:26:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3)* pi*r**3
print(round(a, 3))
print(round(v, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:26:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r = float(input("Qual o valor do raio?"))
a = pi*r**2
v = (4/3)* pi*r**3
print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME:
0.193829
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
